5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1715_3034.log
== SUBMITION (2019-05-02 17:39:15) 
-- CODE:
from math import *
x = input(float())

if(s>=2 and s<=20):
	
	
if(x>=-4 and x<0):
	print(sqrt(abs(x)))
elif(x>0 and x<=4):
	print(sqrt(x))
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.232657
-- ERROR:
  File "/home/codebench/codes/1715/3034/main.py", line 7
    if(x>=-4 and x<0):
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:39:24) 
-- CODE:
from math import *
x = input(float())


	
	
if(x>=-4 and x<0):
	print(sqrt(abs(x)))
elif(x>0 and x<=4):
	print(sqrt(x))
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.191185
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3034/main.py", line 7, in <module>
    if(x>=-4 and x<0):
TypeError: unorderable types: str() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:39:32) 
-- CODE:
from math import *
x = input(float())

if(x>=-4 and x<0):
	print(sqrt(abs(x)))
elif(x>0 and x<=4):
	print(sqrt(x))
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x>=-4 and x<0):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:39:34) 
-- CODE:
from math import *
x = input(float())

if(x>=-4 and x<0):
	print(sqrt(abs(x)))
elif(x>0 and x<=4):
	print(sqrt(x))
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x>=-4 and x<0):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:39:36) 
-- CODE:
from math import *
x = input(float())

if(x>=-4 and x<0):
	print(sqrt(abs(x)))
elif(x>0 and x<=4):
	print(sqrt(x))
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x>=-4 and x<0):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:39:48) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(sqrt(abs(x)))
elif(x>0 and x<=4):
	print(sqrt(x))
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.200735
-- TEST CASE 1:
---- input:
2.56
---- correct output:
1.6
---- user output:
1.6
-- TEST CASE 2:
---- input:
3.99
---- correct output:
1.9975
---- user output:
1.997498435543818
-- TEST CASE 3:
---- input:
-3.99
---- correct output:
1.9975
---- user output:
1.997498435543818
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:39:50) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(sqrt(abs(x)))
elif(x>0 and x<=4):
	print(sqrt(x))
else:
	print("entrada invalida")

	
	

-- OUTPUT:
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:41:11) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,sqrt(abs(x))))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.147255
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3034/main.py", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:41:13) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,sqrt(abs(x))))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:41:33) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,sqrt(abs(x))))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:42:06) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,sqrt(abs(x))))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.109226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3034/main.py", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:42:07) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,sqrt(abs(x))))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:42:11) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,sqrt(abs(x))))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.148835
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3034/main.py", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:42:13) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,sqrt(abs(x))))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:42:31) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,sqrt(abs(x))))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:43:46) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,abs(x)**2))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:43:50) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,abs(x)**2))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:44:38) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,abs(x)**(1/x)))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.141915
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3034/main.py", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:44:40) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,abs(x)**(1/x)))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:45:15) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(,abs(x)**(1/x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.188364
-- ERROR:
  File "/home/codebench/codes/1715/3034/main.py", line 5
    print(,abs(x)**(1/x))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:45:15) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(,abs(x)**(1/x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
File "XXXX", line 5
    print(,abs(x)**(1/x))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:45:17) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(,abs(x)**(1/x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
File "XXXX", line 5
    print(,abs(x)**(1/x))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:45:23) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(abs(x)**(1/x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:46:38) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(abs(x)**(1/x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:47:06) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(abs(x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:47:23) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(sqrt(abs(x)))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:48:05) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,(sqrt(abs(x))))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.204351
-- ERROR:
  File "/home/codebench/codes/1715/3034/main.py", line 6
    elif(x>0 and x<=4):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:48:06) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,(sqrt(abs(x))))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
File "XXXX", line 6
    elif(x>0 and x<=4):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:48:17) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,(sqrt(abs(x)))))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.182284
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3034/main.py", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:48:18) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	print(round(4,(sqrt(abs(x)))))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:49:09) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	x = sqrt(abs(x))
	print(round(4,x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.231752
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3034/main.py", line 8, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:49:10) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	x = sqrt(abs(x))
	print(round(4,x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:49:30) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	x = sqrt(abs(x))
	print(x)
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:49:55) 
-- CODE:
from math import *
x = int(input())

if(x>=-4 and x<0):
	x = sqrt(abs(x))
	print(round(4,x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.225959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3034/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '2.56'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:49:57) 
-- CODE:
from math import *
x = int(input())

if(x>=-4 and x<0):
	x = sqrt(abs(x))
	print(round(4,x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '2.56'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:50:09) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	x = sqrt(abs(x))
	print(round(4,x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.154703
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3034/main.py", line 8, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:50:58) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	x = abs(x) ** (1/2)
	print(round(4,x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.224856
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3034/main.py", line 8, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:51:00) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	x = abs(x) ** (1/2)
	print(round(4,x))
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:51:12) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	x = abs(x) ** (1/2)
	print(x)
elif(x>0 and x<=4):
	print(round(4,sqrt(x)))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(4,sqrt(x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:52:07) 
-- CODE:
from math import *
x = float(input())

if(x>=-4 and x<0):
	x = abs(x) ** (1/2)
	print(round(x,4))
elif(x>0 and x<=4):
	print(round(sqrt(x),4))
elif(x==0):
	print(0)
else:
	print("entrada invalida")

	
	

-- EXECUTION TIME:
0.150284
-- TEST CASE 1:
---- input:
2.56
---- correct output:
1.6
---- user output:
1.6
-- TEST CASE 2:
---- input:
3.99
---- correct output:
1.9975
---- user output:
1.9975
-- TEST CASE 3:
---- input:
-3.99
---- correct output:
1.9975
---- user output:
1.9975
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
